<resources>
    <string name="app_name">ContractorCalculator</string>
    <string name="subtotal">SubTotal</string>
    <string name="materials">Materials</string>
    <string name="labor">Labor</string>
    <string name="calculate">CALCULATE</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="_00_00">$00.00</string>
    <string name="textview"></string>
    <string name="change_rate">Change Rate</string>
    <string name="_5">%5</string>
    <string name="textview22">Enter New Rate</string>
</resources>