<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <EditText
        android:id="@+id/editTextLabor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextMaterial"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabor"
        android:autofillHints="" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="#5E5D5D"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMaterial" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/labor"
        app:layout_constraintEnd_toStartOf="@+id/editTextLabor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/materials"
        app:layout_constraintEnd_toStartOf="@+id/editTextMaterial"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/subtotal"
        app:layout_constraintEnd_toStartOf="@+id/textViewSubTotal"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tax"
        app:layout_constraintEnd_toStartOf="@+id/textViewTax"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/total"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewSubTotal"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <TextView
        android:id="@+id/textViewTax"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTotal" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:textSize="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_00_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTax" />

    <TextView
        android:id="@+id/CurrentTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/NewRate"
        app:layout_constraintEnd_toStartOf="@+id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/NewRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="4"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/changeRateBTN"
        app:layout_constraintEnd_toStartOf="@+id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/changeRateBTN"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:text="@string/change_rate"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>